Add module-info.java to the application